@@ -1,3 +1,9 @@
+Pending changes in the mainline
+===============================
+
+* Fix standard configuration "orthanc-explorer-2": consider the "token"
+  Get arguments
+
 2023-04-15 - v 0.5.1
 ====================
 
